syntax="proto3";

package PbItem;
option go_package = ".";


service SvcItem {
    rpc RPCItem(PbItem) returns (PbResp) {}
    rpc RPCItems(PbReq) returns (PbItems) {}
}

message PbItem {
    string value     =1;      
}

message PbItems {
    repeated   PbItem  items = 1;
}

message PbReq{

}

message PbResp {
    bool isErr = 1;
    string error = 2;
    string message =  3;
}